Fixed alignment of header and menu

--- a/gogn/scss/header.scss
+++ b/gogn/scss/header.scss
@@ -1,8 +1,13 @@
 .header {
   width: 100%;
   max-width: 1200px;
-  margin: 0 auto;
+  margin-left: $gutter;
+  margin-right: $gutter;
   margin-top: $gutter*3;
+
+  @media (min-width: 1200px) {
+    margin: 0 auto;
+  }
 
   &--front_page {
     display: flex;
